--- a/decision-system-extension/decision-system/manifest.json
+++ b/decision-system-extension/decision-system/manifest.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "description": "This is a emulator extension to update the fragment data via the provided API.",
   "permissions": ["activeTab", "storage"],
-  "host_permissions": ["http://localhost/*", "http://127.0.0.1/*"],
+  "host_permissions": ["<all_urls>"],
   "content_scripts": [
     {
-      "matches": ["http://localhost/*", "http://127.0.0.1/*"],
+      "matches": ["<all_urls>"],
       "css": ["styles/contentStyle.min.css"],
       "js": ["scripts/contentScript.js"],
       "run_at": "document_end",
