--- a/runtime-code-mobility-demo/Config.toml
+++ b/runtime-code-mobility-demo/Config.toml
@@ -1,3 +1,4 @@
 app_port = 8081
 code_distributor_api_url = "http://localhost:51335/api/"
 code_distributor_ws_url = "ws://localhost:51335/ws/"
+code_distributor_api_key = "tZwqxgVXSEaqYQZ"
