--- a/decision-system-extension/decision-system/manifest.json
+++ b/decision-system-extension/decision-system/manifest.json
@@ -3,13 +3,24 @@
   "name": "Decision System Emulator",
   "version": "1.0.0",
   "description": "This is a emulator extension to update the fragment data via the provided API.",
-  "permissions": ["activeTab", "storage"],
-  "host_permissions": ["<all_urls>"],
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "css": ["styles/contentStyle.min.css"],
-      "js": ["scripts/contentScript.js"],
+      "matches": [
+        "<all_urls>"
+      ],
+      "css": [
+        "styles/contentStyle.min.css"
+      ],
+      "js": [
+        "scripts/contentScript.js"
+      ],
       "run_at": "document_end",
       "all_frames": false
     }
