--- a/runtime-code-mobility-demo/Config.toml
+++ b/runtime-code-mobility-demo/Config.toml
@@ -1,4 +1,4 @@
 app_port = 8081
-code_distributor_api_url = "http://localhost:8082/api/"
-code_distributor_ws_url = "ws://localhost:8082/ws/"
+code_distributor_api_url = "http://192.168.0.102:8082/api/"
+code_distributor_ws_url = "ws://192.168.0.102:8082/ws/"
 code_distributor_api_key = "tZwqxgVXSEaqYQZ"
