--- a/code-distributor/Cargo.toml
+++ b/code-distributor/Cargo.toml
@@ -17,13 +17,15 @@ futures-util = "0.3.28"
 chrono = "0.4.26"
 log = "0.4.19"
 env_logger = "0.10.0"
-wasmer = "4.2.3"
+#wasmer = "4.2.4"
 rmp-serde = "1.1.2"
 byteorder = "1.4.3"
 thiserror = "1.0.48"
 async-trait = "0.1.73"
 figment = { version = "0.10.10", features = ["env"] }
 jsonwebtoken = "9.1.0"
+wasmtime = "15.0.1"
+wat = "1.0.82"
 
 [dev-dependencies]
 time = "0.3.30"
