--- a/web-application/docker-compose.gen.yml
+++ b/web-application/docker-compose.gen.yml
@@ -8,7 +8,7 @@ services:
       server_code_distributor: "/code-distributor"
       client_code_distributor: "/project/src/frontend/static/js/CodeDistributor"
       compilation_enable_release_mode: "true"
-      compilation_enable_wasm_optimization: "true"
+    #      compilation_enable_wasm_optimization: "true"
     #      compilation_max_thread_pool: 1
     volumes:
       - ./runtime-code-mobility-demo:/demo-app
