--- a/wasm-generator/Cargo.toml
+++ b/wasm-generator/Cargo.toml
@@ -6,23 +6,23 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-syn = {version = "2.0.18", features = ["full", "printing", "visit", "visit-mut", "parsing", "extra-traits"]}
+syn = { version = "2.0.18", features = ["full", "printing", "visit", "visit-mut", "parsing", "extra-traits"] }
 syn-file-expand = "0.3.0"
 synthez = "0.3.1"
 quote = "1.0.28"
 serde = "1.0.163"
-serde_json = {version = "1.0.107", features = ["raw_value"]}
+serde_json = { version = "1.0.107", features = ["raw_value"] }
 serde_derive = "1.0.163"
 serde_yaml = "0.9.21"
 itertools = "0.12.0"
-proc-macro2 = {version = "1.0.66", features = ["span-locations"]}
+proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
 toml = "0.8.0"
 walkdir = "2.3.3"
 log = "0.4.19"
 env_logger = "0.10.0"
 chrono = "0.4.26"
 derive-new = "0.6.0"
-figment = {version = "0.10.10", features = ["toml", "env", "json"]}
+figment = { version = "0.10.10", features = ["toml", "env", "json"] }
 rayon = "1.7.0"
 regex = "1.9.1"
 thiserror = "1.0.48"
@@ -31,6 +31,7 @@ tokio = { version = "1.29.1", features = ["full"] }
 jsonrpc = "0.16.0"
 async-trait = "0.1.73"
 inflections = "1.1.1"
+clap = { version = "4.4.11", features = ["derive"] }
 
 [dev-dependencies]
 tokio-test = "0.4.2"
