--- a/web-application/docker-compose.gen.yml
+++ b/web-application/docker-compose.gen.yml
@@ -7,9 +7,9 @@ services:
       project: "/demo-app"
       server_fragments_dir: "/code-distributor/fragments"
       client_code_distributor_dir: "/project/src/frontend/static/js/CodeDistributor"
-      compilation_enable_release_mode: "true"
-    #      compilation_enable_wasm_optimization: "true"
-    #      compilation_max_thread_pool: 1
+      release_mode: "true"
+    #      optimize_wasm: "true"
+    #      max_thread_pool: 1
     volumes:
       - ./runtime-code-mobility-demo:/demo-app
       - ./code-distributor:/code-distributor
